--- a/index.html
+++ b/index.html
@@ -186,37 +186,28 @@ pre span {
           <h5>Directions</h5>
           <hr class="divide">
           <b>Step 1:</b>
-          <p class="step">Mix 120g softened butter until smooth and creamy using an electric mixer on low speed.</p>
+          <p class="step">Sift the 140g all purpose flour, 100g corn starch, 70g powdered sugar, 60g almond flour and 2g salt into a bowl.</p>
 
           <b>Step 2:</b>
-          <p class="step">Add 80g powdered sugar through a sieve and then mix it with the butter.</p>
+          <p class="step">Mix all the ingredients evenly.</p>
 
           <b>Step 3:</b>
-          <p class="step">Add 2 egg yolks, one at a time, to the mixture until they are fully mixed in.</p>
+          <p class="step">Add 100g roasted almond flakes to the mixture until they are evenly distributed.</p>
 
           <b>Step 4:</b>
-          <p class="step">Add 4g of vanilla extract to the mixture and mix until well combined with the other ingredients.</p>
+          <p class="step">Gradually stir in 130g peanut oil until the mixture becomes dough-like.</p>
 
           <b>Step 5:</b>
-          <p class="step">Add 160g cake flour, 40g almond flour and 2g salt through a sieve to the mixture.</p>
+          <p class="step">Roll out the dough to a 1cm thickness using a rolling pin. (You can use parchment paper to prevent sticking while rolling out the dough.)</p>
 
           <b>Step 6:</b>
-          <p class="step">Gently fold all of the ingredients until a dough forms.</p>
+          <p class="step">Cut the dough into cookies with a cookie cutter.</p>
 
           <b>Step 7:</b>
-          <p class="step">Mix 20g cocoa powder and 60g roasted almonds into the dough evenly until they are fully incorporated.</p>
-
-          <b>Step 8:</b>
-          <p class="step">Wrap the dough in parchment paper to form a 1.5-inch cylinder and place the wrapped dough in the refrigerator's freezing compartment for 1 hour.</p>
-
-          <b>Step 9:</b>
-          <p class="step">After 1 hour, unwrap the dough and slice it into 0.5cm thickness cookies.</p>
-
-          <b>Step 10:</b>
-          <p class="step">Bake cookies at 170C/338F for 15 mins on top/bottom heat mode.</p> 
+          <p class="step">Bake cookies at 160C/320F for 30 mins on top/bottom heat mode.</p> 
 
 
-        <p>The cookies are all done! Time to dig into these yummy homemade chocolate almond cookies!</p>
+        <p>The cookies are ready! Time to enjoy these delicious homemade white almond cookies!</p>
 
 </div>
       </div>
